tests/baselines/reference/specializeTag4.errors.txt
specializeTag4.js(31,18): error TS2344: Type 'number' does not satisfy the constraint '{ id: string; }'.


==== specializeTag4.js (1 errors) ====
    /**
     * @template {{ id: string }} T
     */
    class Collection {
        /**
         * @param {string} name
         */
        constructor(name) {
            /** @type {string} */
            this.name = name;
        }
    
        /**
         * @param {string} id
         * @returns {T}
         */
        getById(id) {
            return /** @type {T} */({ id });
        }
    }
    
    /**
     * @typedef {object} UserData
     * @property {string} id
     * @property {string} name
     */
    
    /** @specialize <UserData> */
    const users = new Collection('users');
    
    /** @specialize <number> */
                     ~~~~~~
!!! error TS2344: Type 'number' does not satisfy the constraint '{ id: string; }'.
    const numbers = new Collection('numbers');
    